# jira-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
data/policies/: POL-01.md  POL-02.md  POL-03.md  POL-04.md  POL-05.md  POL-06.md  POL-07.md  POL-08.md  POL-09.md  POL-10.md
data/tickets/: eval_tickets.json
docs/: eval_report.csv  eval_report.md
docs/adr/: 0001-confidence-floor-not-threshold.md  0002-default-semantic-embeddings-retriever.md  README.md
src/jira_agent/: __init__.py  cli.py  config.py  logging_setup.py  models.py  reason_codes.py  redaction.py  runner.py  soc.py
src/jira_agent/agent/: __init__.py  grounding.py  pipeline.py
src/jira_agent/eval/: __init__.py  harness.py  live.py  report.py
src/jira_agent/jira/: __init__.py  actions.py  client.py  mapping.py  seed.py
src/jira_agent/llm/: __init__.py  anthropic_client.py  base.py  parsing.py  prompts.py
src/jira_agent/policies/: __init__.py  loader.py  retriever.py
src/jira_agent/triage/: __init__.py  classifier.py
tests/: conftest.py  fakes.py  test_actions.py  test_anthropic_client.py  test_cli.py  test_client.py  test_eval_dataset.py  test_grounding.py  test_live_eval.py  test_parsing.py  test_pipeline.py  test_policy_loader.py  test_redaction.py  test_report.py  test_retriever.py  test_runner.py  test_seed.py  test_soc.py  test_triage.py
