[project]
name = "jira-agent"
version = "0.1.0"
description = "Grounded AI agent that auto-resolves or defers IT helpdesk tickets in Jira against a fixed policy knowledge base."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nick Cemenenkoff", email = "cemenenkoff@gmail.com" }]

dependencies = [
    # Domain models & typed config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # LLM provider (swappable behind jira_agent.llm.base)
    "anthropic>=0.40",
    # Jira REST client (async-capable, first-class timeouts)
    "httpx>=0.27",
    # Retry/backoff for the Jira API
    "tenacity>=8.4",
    # Structured, leveled logging (observability dimension)
    "structlog>=24.1",
    # Policy front-matter parsing
    "pyyaml>=6.0",
    # Baseline TF-IDF retriever + cosine scoring (no API key required, runs offline)
    "scikit-learn>=1.5",
    "numpy>=1.26",
    # CLI entrypoints
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# Pick one concrete embedding backend for the hybrid retriever (TF-IDF is the default fallback).
voyage = ["voyageai>=0.2"]               # Anthropic-recommended hosted embeddings (needs VOYAGE_API_KEY)
local-embeddings = ["sentence-transformers>=3.0"]  # offline embeddings, no API key (pulls torch)
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
jira-agent = "jira_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jira_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
packages = ["jira_agent"]
mypy_path = "src"
strict = true
ignore_missing_imports = true
